@@ -25,7 +25,7 @@ sub new {
 
 sub connect {
   my ($class, $to) = @_;
-  use_module('Object::Remote::Connection')->new_from_spec($to);
+  use_module('Object::Remote::Connection')->maybe::start::new_from_spec($to);
 }
 
 sub current_loop {
