@@ -119,7 +119,9 @@ sub new_from_spec {
   my ($class, $spec) = @_;
   return $spec if blessed $spec;
   foreach my $poss (do { our @Guess }) {
-    if (my $obj = $poss->($spec)) { return $obj }
+    if (my $conn = $poss->($spec)) {
+      return $conn->maybe::start::connect;
+    }
   }
   die "Couldn't figure out what to do with ${spec}";
 }
