@@ -82,7 +82,7 @@ push @Object::Remote::Connection::Guess, sub {
   for ($_[0]) {
     # username followed by @
     if (defined and !ref and /^ ([^\@]*?) \@ $/x) {
-      return __PACKAGE__->new(target_user => $1)->connect;
+      return __PACKAGE__->new(target_user => $1);
     }
   }
   return;
