@@ -6,9 +6,11 @@ use Moo;
 
 with 'Object::Remote::Role::Connector::PerlInterpreter';
 
+has ssh_to => (is => 'ro', required => 1);
+
 around _perl_command => sub {
-  my ($orig, $self, $target) = @_;
-  return 'ssh', '-A', $target, $self->$orig($target);
+  my ($orig, $self) = @_;
+  return 'ssh', '-A', $self->ssh_to, $self->$orig;
 };
 
 no warnings 'once';
@@ -17,7 +19,7 @@ push @Object::Remote::Connection::Guess, sub {
   for ($_[0]) {
     # 0-9 a-z _ - first char, those or . subsequent - hostnamish
     if (defined and !ref and /^(?:.*?\@)?[\w\-][\w\-\.]/) {
-      return __PACKAGE__->new->connect($_[0]);
+      return __PACKAGE__->new(ssh_to => $_[0]);
     }
   }
   return;
