@@ -11,6 +11,9 @@ has is_running => (is => 'ro', clearer => 'stop');
 has _read_watches => (is => 'ro', default => sub { {} });
 has _read_select => (is => 'ro', default => sub { IO::Select->new });
 
+has _write_watches => (is => 'ro', default => sub { {} });
+has _write_select => (is => 'ro', default => sub { IO::Select->new });
+
 has _timers => (is => 'ro', default => sub { [] });
 
 sub pass_watches_to {
@@ -19,6 +22,12 @@ sub pass_watches_to {
     $new_loop->watch_io(
       handle => $fh,
       on_read_ready => $self->_read_watches->{$fh}
+    );
+  }
+  foreach my $fh ($self->_write_select->handles) {
+    $new_loop->watch_io(
+      handle => $fh,
+      on_write_ready => $self->_write_watches->{$fh}
     );
   }
 }
@@ -30,6 +39,10 @@ sub watch_io {
     $self->_read_select->add($fh);
     $self->_read_watches->{$fh} = $cb;
   }
+  if (my $cb = $watch{on_write_ready}) {
+    $self->_write_select->add($fh);
+    $self->_write_watches->{$fh} = $cb;
+  }
 }
 
 sub unwatch_io {
@@ -38,6 +51,10 @@ sub unwatch_io {
   if ($watch{on_read_ready}) {
     $self->_read_select->remove($fh);
     delete $self->_read_watches->{$fh};
+  }
+  if ($watch{on_write_ready}) {
+    $self->_write_select->remove($fh);
+    delete $self->_write_watches->{$fh};
   }
   return;
 }
@@ -64,12 +81,18 @@ sub unwatch_time {
 sub loop_once {
   my ($self) = @_;
   my $read = $self->_read_watches;
-  my ($readable) = IO::Select->select($self->_read_select, undef, undef, 0.5);
+  my $write = $self->_write_watches;
+  my ($readable, $writeable) = IO::Select->select(
+    $self->_read_select, $self->_write_select, undef, 0.5
+  );
   # I would love to trap errors in the select call but IO::Select doesn't
   # differentiate between an error and a timeout.
   #   -- no, love, mst.
   foreach my $fh (@$readable) {
-    $read->{$fh}();
+    $read->{$fh}() if $read->{$fh};
+  }
+  foreach my $fh (@$writeable) {
+    $write->{$fh}() if $write->{$fh};
   }
   my $timers = $self->_timers;
   my $now = time();
