@@ -4,6 +4,7 @@ use IPC::Open2;
 use IO::Handle;
 use Object::Remote::ModuleSender;
 use Object::Remote::Handle;
+use Object::Remote::Future;
 use Scalar::Util qw(blessed);
 use Moo::Role;
 
@@ -20,15 +21,20 @@ sub _build_module_sender {
 
 around connect => sub {
   my ($orig, $self) = (shift, shift);
-  my $conn = $self->$orig(@_);
-  Object::Remote::Handle->new(
-    connection => $conn,
-    class => 'Object::Remote::ModuleLoader',
-    args => { module_sender => $self->module_sender }
-  )->disarm_free;
-  require Object::Remote::Prompt;
-  Object::Remote::Prompt::maybe_set_prompt_command_on($conn);
-  return $conn;
+  my $f = $self->$start::start($orig => @_);
+  return future {
+    $f->on_done(sub {
+      my ($conn) = $f->get;
+      Object::Remote::Handle->new(
+        connection => $conn,
+        class => 'Object::Remote::ModuleLoader',
+        args => { module_sender => $self->module_sender }
+      )->disarm_free;
+      require Object::Remote::Prompt;
+      Object::Remote::Prompt::maybe_set_prompt_command_on($conn);
+    });
+    $f;
+  } 2;
 };
 
 sub _perl_command { 'perl', '-' }
@@ -46,11 +52,26 @@ sub _start_perl {
 sub _open2_for {
   my $self = shift;
   my ($foreign_stdin, $foreign_stdout, $pid) = $self->_start_perl(@_);
-  $foreign_stdin->autoflush(1);
-  print $foreign_stdin 'BEGIN { $ENV{OBJECT_REMOTE_DEBUG} = 1 }'."\n"
-    if $ENV{OBJECT_REMOTE_DEBUG};
-  print $foreign_stdin $self->fatnode_text
-    or die "Failed to send fatpacked data to new node on '$_[0]': $!";
+  my $to_send = $self->fatnode_text;
+  Object::Remote->current_loop
+                ->watch_io(
+                    handle => $foreign_stdin,
+                    on_write_ready => sub {
+                      my $len = syswrite($foreign_stdin, $to_send, 4096);
+                      if (defined $len) {
+                        substr($to_send, 0, $len) = '';
+                      }
+                      # if the stdin went away, we'll never get Shere
+                      # so it's not a big deal to simply give up on !defined
+                      if (!defined($len) or 0 == length($to_send)) {
+                        Object::Remote->current_loop
+                                      ->unwatch_io(
+                                          handle => $foreign_stdin,
+                                          on_write_ready => 1
+                                        );
+                      }
+                    }
+                  );
   return ($foreign_stdin, $foreign_stdout, $pid);
 }
 
@@ -64,7 +85,7 @@ sub fatnode_text {
 $INC{'Object/Remote/FatNode.pm'} = __FILE__;
 $Object::Remote::FatNode::DATA = <<'ENDFAT';
 END
-  $text .= $Object::Remote::FatNode::DATA;
+  $text .= do { no warnings 'once'; $Object::Remote::FatNode::DATA };
   $text .= "ENDFAT\n";
   $text .= <<'END';
 eval $Object::Remote::FatNode::DATA;
