@@ -9,7 +9,9 @@ use Object::Remote;
 my $user = $ENV{TEST_SUDOUSER}
     or plan skip_all => q{Requires TEST_SUDOUSER to be set};
 
-my $remote = TestFindUser->new::on("${user}\@");
+my $conn = Object::Remote->connect('-')->connect("${user}\@");
+
+my $remote = TestFindUser->new::on($conn);
 my $remote_user = $remote->user;
 like $remote_user, qr/^\d+$/, 'returned an int';
 isnt $remote_user, $<, 'ran as different user';
